--- a/src/modules/DaysList/DaysList.scss
+++ b/src/modules/DaysList/DaysList.scss
@@ -30,16 +30,18 @@
         padding: 20px;
     }
 
-    &-day:hover{
-        scale: 1.03;
-        transition: 0.3s;
-        box-shadow: 2px 2px 5px rgba($color: #38c94d, $alpha: 0.5);
-    }
-
-    &-day:not(:hover){
-        scale: 1;
-        transition: 0.3s;
+    &-holiday{
+        cursor: pointer;
+        width: 200px;
+        height: 200px;
+        border-radius: 10px;
         box-shadow: 2px 2px 5px gray;
+        background-color: rgba($color: #dd4141, $alpha: 0.6);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: 20px;
     }
 }
 
@@ -66,6 +68,18 @@
         align-items: flex-start;
         padding: 15px;
     }
+}
+
+.day:hover{
+    scale: 1.03;
+    transition: 0.3s;
+    box-shadow: 2px 2px 5px rgba($color: #38c94d, $alpha: 0.5);
+}
+
+.day:not(:hover){
+    scale: 1;
+    transition: 0.3s;
+    box-shadow: 2px 2px 5px gray;
 }
 
 .modal{
@@ -134,6 +148,7 @@
     }
 
     &__control{
+        margin-right: 20px;
         display: flex;
         align-items: center;
         gap: 10px;
