--- a/src/components/monthSelector/MonthSelector.scss
+++ b/src/components/monthSelector/MonthSelector.scss
@@ -1,4 +1,8 @@
 .selector{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 50px;
 
     &-select{
         width: 200px;
@@ -6,11 +10,50 @@
         border: 2px solid gray;
         padding: 10px;
         border-radius: 10px;
-        margin-bottom: 50px;
+        
 
         -webkit-appearance: none;
         background-image: url('../../ui/images/selector-image.png');
         background-repeat: no-repeat;
         background-position: 95% 50%;
     }
+
+    &__history{
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+}
+
+.history{
+
+    &__holiday{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    &__workday{
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    &-example{
+        width: 25px;
+        height: 25px;
+        border-radius: 5px;
+    }
+
+    &-description{
+
+    }
+}
+
+.work-example{
+    box-shadow: 2px 2px 5px gray;
+}
+
+.holiday-example{
+    background-color: rgba($color: #dd4141, $alpha: 0.6);
 }
