--- a/src/modules/DaysList/DaysList.scss
+++ b/src/modules/DaysList/DaysList.scss
@@ -3,6 +3,13 @@
     display: flex;
     flex-direction: column;
 
+    &__weekRow{
+        margin-bottom: 40px;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+
     &__row{
         display: flex;
         gap: 10px;
@@ -34,6 +41,43 @@
         align-items: flex-start;
         justify-content: space-between;
         padding: 20px;
+    }
+}
+
+.week{
+
+    &__scroller{
+        height: 100%;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 10px;
+    }
+
+    &-element{
+        height: 20px;
+        width: 20px;
+        border-radius: 5px;
+        border: 1px solid gray;
+    }
+
+    &-active{
+        height: 20px;
+        width: 20px;
+        border-radius: 5px;
+        background-color: #38c94d;
+    }
+
+    &-plus{
+        display: flex;
+        align-items: center;
+        background-color: white;
+    }
+
+    &-minus{
+        display: flex;
+        align-items: center;
+        background-color: white;
     }
 }
 
