--- a/src/components/modal/Modal.scss
+++ b/src/components/modal/Modal.scss
@@ -43,6 +43,54 @@
     }
 }
 
+@media(max-width: 1200px){
+    .modal{
+        right: 25%;
+    }
+}
+
+@media(max-width: 900px){
+    .modal{
+        width: 350px;
+        right: 30%;
+    }
+}
+
+@media(max-width: 700px){
+    .modal{
+        width: 350px;
+        right: 25%;
+    }
+}
+
+@media(max-width: 600px){
+    .modal{
+        width: 350px;
+        right: 20%;
+    }
+}
+
+@media(max-width: 500px){
+    .modal{
+        width: 300px;
+        right: 20%;
+    }
+}
+
+@media(max-width: 500px){
+    .modal{
+        width: 250px;
+        right: 20%;
+    }
+}
+
+@media(max-width: 390px){
+    .modal{
+        width: 250px;
+        right: 15%;
+    }
+}
+
 .tasks{
 
     &__actions{
