--- a/src/components/monthSelector/MonthSelector.scss
+++ b/src/components/monthSelector/MonthSelector.scss
@@ -1,6 +1,7 @@
 .selector{
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 50px;
 
@@ -21,6 +22,7 @@
     &__history{
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
         gap: 20px;
     }
 }
